--- a/functions/package.json
+++ b/functions/package.json
@@ -3,12 +3,14 @@
   "description": "Cloud Functions for Firebase",
   "dependencies": {
     "@google-cloud/logging": "^0.7.1",
-    "firebase-admin": "~5.5.0",
-    "firebase-functions": "^0.7.3",
-    "nodemailer": "^4.0.1",
-    "nodemailer-sendgrid-transport": "^0.2.0",
     "dateformat": "^3.0.2",
     "fb": "^2.0.0",
+    "firebase-admin": "~5.5.0",
+    "firebase-functions": "^0.8.1",
+    "nodemailer": "^4.0.1",
+    "nodemailer-sendgrid-transport": "^0.2.0",
+    "request": "^2.83.0",
+    "request-promise": "^4.2.2",
     "stripe": "^4.15.0"
   },
   "private": true
