--- a/functions/package.json
+++ b/functions/package.json
@@ -6,7 +6,8 @@
     "shell": "firebase functions:shell",
     "start": "npm run shell",
     "deploy": "firebase deploy --only functions",
-    "logs": "firebase functions:log"
+    "logs": "firebase functions:log",
+    "lint": "eslint"
   },
   "dependencies": {
     "firebase-admin": "~6.0.0",
@@ -21,5 +22,8 @@
     "request-promise": "^4.2.2",
     "stripe": "^6.11.0"
   },
-  "private": true
+  "private": true,
+  "devDependencies": {
+    "eslint": "^5.6.0"
+  }
 }
