--- a/functions/package.json
+++ b/functions/package.json
@@ -1,6 +1,9 @@
 {
   "name": "functions",
   "description": "Cloud Functions for Firebase",
+  "engines": {
+    "node": ">= 8.0"
+  }
   "scripts": {
     "serve": "firebase serve --only functions",
     "shell": "firebase functions:shell",
@@ -10,11 +13,12 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "firebase-admin": "~6.0.0",
-    "firebase-functions": "^2.0.3",
     "@sendgrid/mail": "^6.3.1",
     "dateformat": "^3.0.3",
     "fb": "^2.0.0",
+    "firebase-admin": "~6.0.0",
+    "firebase-functions": "^2.0.3",
+    "moment": "^2.22.2",
     "node-datetime": "^2.1.0",
     "nodemailer": "^4.6.8",
     "nodemailer-sendgrid-transport": "^0.2.0",
