--- a/functions/package.json
+++ b/functions/package.json
@@ -2,8 +2,8 @@
   "name": "functions",
   "description": "Cloud Functions for Firebase",
   "engines": {
-    "node": ">= 8.0"
-  }
+    "node": "8"
+  },
   "scripts": {
     "serve": "firebase serve --only functions",
     "shell": "firebase functions:shell",
