--- a/functions/package.json
+++ b/functions/package.json
@@ -19,6 +19,7 @@
     "firebase-admin": "~6.0.0",
     "firebase-functions": "^2.0.3",
     "moment": "^2.22.2",
+    "moment-timezone": "^0.5.23",
     "node-datetime": "^2.1.0",
     "nodemailer": "^4.6.8",
     "nodemailer-sendgrid-transport": "^0.2.0",
